# vssetup

./: Cargo.toml  README.md
.github/workflows/: ci.yml  install-msvc.yml
crates/install-msvc/: Cargo.toml
crates/install-msvc/src/: main.rs
examples/: vsall.rs
src/: com.rs  defs.rs  lib.rs  raw.rs
