[package]
name = "vssetup"
description = "Tools for interacting with the Visual Studio installer "
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ChrisDenton/vssetup"
documentation = "https://docs.rs/vssetup/0.1.0/vssetup/"

[dependencies.windows-core]
version = "0.62.2"
default-features = false

[dependencies.windows-strings]
version = "0.5.1"
default-features = false

[dependencies.windows-result]
version = "0.4.1"
default-features = false

[dependencies.windows-link]
version = "0.2.1"
default-features = false
