[package]
name = "vssetup"
description = "Tools for interacting with the Visual Studio installer"
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/ChrisDenton/vssetup"
documentation = "https://docs.rs/vssetup/0.3.0/vssetup/"

[dependencies.windows-strings]
version = "0.5.1"
default-features = false

[dependencies.windows-result]
version = "0.4.1"
default-features = false

[dependencies.windows-link]
version = "0.2.1"
default-features = false

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []
